# shareGain1

./: READ.ME
src/: app.py  pyproject.toml  requirements.txt
src/adapters/: price_calculator.py
src/models/: models.py
src/repositories/: repository.py
