[tool.poetry]
name = "sharegain_test"
version = "0.1.0"
description = "Sharegain Test - Service.IO"
authors = ["Mickey Perlstein <corp.mp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
openapi3 = "^1.6.5"
dateparser = "^1.1.1"
attrs = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
